--- a/src/components/SearchCard/styles.css
+++ b/src/components/SearchCard/styles.css
@@ -28,9 +28,10 @@ font-weight: 500;
     margin-top: 12px;
 }
 
-.sc-content-box p {
+.sc-content-box input {
     font-size: 16px;
     font-weight: 400;
     color: var(--color-font-grey-2);
-    margin-left: 17px;
+    margin: 8px 17px;
+    border: unset;
 }
