--- a/src/components/SearchButton/styles.css
+++ b/src/components/SearchButton/styles.css
@@ -7,9 +7,7 @@
     align-items: center;
     justify-content: center;
     margin-top: 27px;
-}
-
-.btn-search p {
+    border: none;
     color: var(--color-font-secondary);
     font-size: 16px;
     font-weight: 400;
