--- a/src/components/SearchCard/styles.css
+++ b/src/components/SearchCard/styles.css
@@ -16,7 +16,12 @@ font-size: 38px;
 font-weight: 500;
 }
 
-.sc-content-box {
+.sc-container input {
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--color-font-grey-2);
+    margin: 12px 0;
+    border: unset;
     width: 298px;
     height: 40px;
     border-radius: 4px;
@@ -25,13 +30,5 @@ font-weight: 500;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 12px;
-}
-
-.sc-content-box input {
-    font-size: 16px;
-    font-weight: 400;
-    color: var(--color-font-grey-2);
-    margin: 8px 17px;
-    border: unset;
+    padding: 0 17px;
 }
