--- a/src/index.css
+++ b/src/index.css
@@ -1,38 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;700&family=Roboto:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;700&family=Roboto:wght@400;500;700&display=swap");
 
 :root {
- --color-bg-primary: #F7F9FA;
- --color-bg-secondary: #fff;
+  --color-bg-primary: #f7f9fa;
+  --color-bg-secondary: #fff;
 
- --color-bg-header-button: #1890FF;
+  --color-bg-header-button: #1890ff;
 
- --color-bg-searchCard: #E6F7FF;
- --color-bg-resultCard: #F5F5F5;
+  --color-bg-searchCard: #e6f7ff;
+  --color-bg-resultCard: #f5f5f5;
 
- --color-font-primary: #000;
- --color-font-secondary: #fff;
- --color-font-tertiary: #262626;
+  --color-font-primary: #000;
+  --color-font-secondary: #fff;
+  --color-font-tertiary: #262626;
 
- --color-font-grey-1: #7E7E7E;
- --color-font-grey-2: #BFBFBF;
- --color-font-grey-3: #5C5858;
- --color-font-grey-4: #737373;
- 
- --color-border-grey-1: #d9d9d9;
+  --color-font-grey-1: #7e7e7e;
+  --color-font-grey-2: #bfbfbf;
+  --color-font-grey-3: #5c5858;
+  --color-font-grey-4: #737373;
+
+  --color-border-grey-1: #d9d9d9;
 }
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Roboto';
+  font-family: "Roboto";
 }
 
 body {
   background-color: var(--color-bg-secondary);
 }
 
-a, a:hover {
+a,
+a:hover {
   text-decoration: none;
   color: unset;
 }
@@ -43,4 +44,16 @@ a, a:hover {
 
 .ml-90 {
   margin-left: 90px;
+}
+
+.ml-90 h2 {
+  font-size: 38px;
+  font-weight: 500;
+  color: var(--color-font-tertiary);
+}
+
+.ntf-container {
+  width: 1251px;
+  height: 334px;
+  margin: 64px 0;
 }
